# debounce

./: .gitignore  README.md  pyproject.toml
src/debounce/: __init__.py  aio.py
tests/: conftest.py  test_asyncio_compatibility.py  test_bounce_simple_usage.py  test_debounce_advanced_usage.py  test_pyside_compatibility.py
